--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container mt-5 mb-5">
+        <p><a href="./html/constitutional review.html">Page 2</a></p>
         <div class="card p-4">
             <h1 class="text-primary mb-4 editable">Adapting Your Constitution to Contemporary Governance Trends</h1>
             <p class="mb-4 editable">It’s crucial that your organization’s constitution keeps pace with these changes. Failing to update your governance framework to reflect modern trends can leave your organization behind, struggling with outdated practices that no longer serve its best interests. Here are some of the key governance trends that should be reflected in your constitution:</p>
